<resources>
    <string name="app_name">Wasteless</string>
    <string name="title_home">Home</string>
    <!--  Search strings  -->
    <string name="title_search">Search</string>
    <string name="filter_description" > Description </string>
    <string name="filter_date" > Date </string>
    <string name="filter_category" > Category </string>
    <string name="filter_tag" > Tag </string>
    <!--  History strings  -->
    <string name="title_wallets_manager">Wallets</string>
    <string name="button_back">&lt;</string>
    <string name="button_next">&gt;</string>
    <string name="settings">Settings</string>
</resources>
