<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wasteless.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.wasteless.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_wallets_manager"
        android:name="com.wasteless.ui.wallets_manager.WalletsManagerFragment"
        android:label="@string/title_wallets_manager"
        tools:layout="@layout/fragment_wallets_manager" />
    <fragment
        android:id="@+id/navigation_add_new_transaction"
        android:name="com.wasteless.ui.add_transaction.AddTransactionFragment"
        android:label="Add new transaction"
        tools:layout="@layout/fragment_add_new_transaction" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.wasteless.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />


</navigation>
