<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <SearchView
                android:id="@+id/search_field"
                android:iconifiedByDefault="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:measureAllChildren="false"
                android:fillViewport="false"
                android:scrollbars="none">

                <RadioGroup
                    android:id="@+id/filters_list"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/filter_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/filter_button_background"
                        android:text="@string/filter_description" />

                    <RadioButton
                        android:id="@+id/filter_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/filter_button_background"
                        android:checked="true"
                        android:text="@string/filter_date" />

                    <RadioButton
                        android:id="@+id/filter_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/filter_button_background"
                        android:text="@string/filter_category" />

                    <RadioButton
                        android:id="@+id/filter_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/filter_button_background"
                        android:text="@string/filter_tag" />
                </RadioGroup>
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>